--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.NewDailyReportActivity" />
         <activity android:name=".activities.DailyReportShowActivity" />
-        <activity android:name=".activities.EditDailyReportActivity"></activity>
+        <activity android:name=".activities.EditDailyReportActivity" />
+        <activity android:name=".activities.PrivacyActivity"></activity>
     </application>
 
 </manifest>
